refactor: menu, product => exception 구체화